# Vision

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Executive Report on __Vision__.md  README.md  RELEASE.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  python-security.yml  release.yml
UI_UX/: README.md  budget.py  requirements.txt
learning_data/samples/: incident_log.txt  long_blog.md  pr_example.txt
tests/: test_cli.py  test_multi_profile.py  test_ocr.py  test_profiles.py  test_screenshot_integration.py  test_triage.py
vision_ui/: README.md  __init__.py  cli.py  ocr.py  profiles.py  summarize.py  triage.py
vision_ui/tests/: test_cli_summarize_multi_ui.py  test_persona_budget_ui.py  test_profiles.py  test_profiles_ui.py  test_summarize.py  test_summarize_ui.py
